Gather datasets for comparison.

--- a/code/fmap/Rakefile
+++ b/code/fmap/Rakefile
@@ -8,7 +8,7 @@ implementations = Dir['*.cpp'].map { |file|
 
 
 task :default => ['fmap']
-plot('fmap' => %w{dataset/constexpr dataset/mpl dataset/mpl11})
+plot('fmap' => %w{dataset/constexpr dataset/mpl dataset/mpl11 dataset/constexpr_auto})
 
 implementations.each do |impl|
   dataset(1..1000, "dataset/#{impl}" => ["#{impl}.cpp"], compiler:'clang35', include: ['~/code/mpl11/include', '~/code/mpl11-cppnow-2014/code']) do |n|
