Add tentative if_.

--- a/code/constexpr/Makefile
+++ b/code/constexpr/Makefile
@@ -4,7 +4,7 @@ WFLAGS := -Wall -Wextra -pedantic -Wno-unused-const-variable
 INCLUDES := -I $(CWD)/..
 CC := clang++-3.5
 
-all: integral.test list.test type.test
+all: integral.test list.test type.test if.test
 
 build_dir:
 	mkdir -p build
